@@ -106,8 +106,9 @@ Working version
   (Gabriel Scherer and Armaël Guéneau,
    review by Valentin Gatien-Baron and Damien Doligez)
 
-- GPR#1519: migrate expect tests to ocamltest
-  (Sébastien Hinderer, review by Gabriel Scherer)
+- GPR#1519, GPR#1532: migrate expect tests to ocamltest
+  (Sébastien Hinderer, review by Gabriel Scherer, Valentin Gatien-Baron
+  and Nicolás Ojeda Bär)
 
 ### Bug fixes
 
